--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MYSQL_PASSWORD=your_password
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 
-DWH_SCHEMA=dwh_tables
+DWH_SCHEMA=dwh_internal_tables
 APP_SCHEMA=app_db
